--- a/ArcsSystem/templates/base.html
+++ b/ArcsSystem/templates/base.html
@@ -201,7 +201,7 @@
 							<div class="collapse navbar-collapse justify-content-start">
 								<ul class="nav navbar-nav">
 									<li class="nav-item"><a class="nav-link pt-0 font-dark-green-color" href="#" style="padding-left: 0;"><strong class="footer-navbar-padding">{% trans "ABOUT US" %}</strong></a></li>
-									<li class="nav-item"><a class="nav-link pt-0 font-dark-green-color" href="#"><strong class="footer-navbar-padding">{% trans "PRESS" %}</strong></a></li>
+									<li class="nav-item"><a class="nav-link pt-0 font-dark-green-color" href="{% url 'staticpages:press_list'%}"><strong class="footer-navbar-padding">{% trans "PRESS" %}</strong></a></li>
 									<li class="nav-item"><a class="nav-link pt-0 font-dark-green-color" href="#"><strong class="footer-navbar-padding">{% trans "CONTACT" %}</strong></a></li>
 									<li class="nav-item"><a class="nav-link pt-0 font-dark-green-color" href="#">{% trans "For Developers-API" %}</a></li>
 								</ul>
@@ -281,15 +281,21 @@
 							</a>
 						</div>
 						<div class="col-auto">
-							{% with x='privacy'|get_page %}
-							<a href="{{ x }}">
-							{% endwith %}
+
+
+							{% for page in 'privacy'|get_page %}
+								<a href="{{ page.get_absolute_url }}">
+							{% endfor %}
 							<p class="mb-0">{% trans "Privacy policy" %}</p>
+
 							</a>
 						</div>
 						<div class="col-auto">
-							<a href="#">
+							{% for page in 'cookies'|get_page %}
+								<a href="{{ page.get_absolute_url }}">
+							{% endfor %}
 							<p class="mb-0">{% trans "Cookies policy" %}</p>
+
 							</a>
 						</div>
 					</div>
