--- a/ArcsSystem/templates/projects/project_submissionform.html
+++ b/ArcsSystem/templates/projects/project_submissionform.html
@@ -1,31 +1,776 @@
 {% extends 'base.html' %}{% load static %}{% load i18n %}{% block content %}
 
-{% if user.is_authenticated %}
 
-<form  method='post' enctype="multipart/form-data">
-  {% csrf_token %}
-    <p>{% trans "Your account and email will be associated with this submission for follow-up." %}</p>
-  <fieldset>
-    {{ Submission.as_p }}
-    <button type='submit' value='Save'>Submit Project to ARCS</button> <!-- TODO replace with django template for  -->
+
+
+
+
+<script type="text/javascript">
+
+
+
+
+
+  function add_keyword_input_line(sv, en) {
+
+    if( count < 10){
+
+      count += 1
+      var new_keyword_line =  $("#hidden_keyword_div" ).clone();
+      new_keyword_line.attr("id", "keyword_div_" + count)
+      new_keyword_line.find("#hidden_input_eng").attr({"name": "Keyword_eng_" + count, "value" : en })
+      new_keyword_line.find("#hidden_input_sve").attr({"name": "Keyword_sve_" + count, "value" : sv })
+      new_keyword_line.find("#hidden_row_number").html( count)
+      new_keyword_line.appendTo( "#keyword_div" );
+
+    }
+
     
-  </fieldset>
+
+  }
+
+  function remove_keyword_input_line(){
+    if(count > 1){
+      console.log(  $("#keyword_div_" + count ))
+      $("#keyword_div_" + count ).remove();
+      count -= 1
+    } 
+  }
+
+</script>
+
+      <form  method='post' enctype="multipart/form-data">
+        {% csrf_token %}
 
 
-</form>
+
+<div class="custom-container">
+
+  <ul class="nav nav-tabs">
+
+
+
+
+    <li class="nav-item">
+      <a class="nav-link active disabled" data-toggle="tab" href="#step1">Details</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link disabled" data-toggle="tab" href="#step_aim">Aim <span class="glyphicon glyphicon-align-left" ></span></a>
+    </li>
+    <li class="nav-item ">
+      <a class="nav-link disabled" data-toggle="tab" href="#step_description">Description</a>
+    </li>
+
+    <li class="nav-item">
+      <a class="nav-link disabled" data-toggle="tab" href="#step3">Keywords</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link disabled" data-toggle="tab" href="#step4">Card view</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link disabled" data-toggle="tab" href="#step5">Contact info</a>
+
+
+    </li>
+
+    <div  style="margin-left: 10px" class="row">
+
+
+
+        <button class="nav-item  btn-danger" type="button" onclick="prevnav()" style="margin: 10px; padding: 5px;">< previus </button>
+
+
+
+
+        <button class="nav-item  btn-success" type="button" onclick="nextnav()" style="margin: 10px; padding: 5px;">next > </button>
+
+        </div>
+
+
+  </ul>
+
+
+  <div class="tab-content">
+
+
+    <br>
+
+    {% if user.is_authenticated %}
+
+    <div id="step1" class="tab-pane container active">
+
+
+      <h3> Project details  </h3>
+      <br>
+
+
+        <p>{% trans "Your account and email will be associated with this submission for follow-up." %}</p>
+
+
+
+          <div align="center" class="row">
+
+
+
+            <div class="col-3">
+              <h4>
+                {{Submission.name.label}}
+              </h4>
+
+              {{ Submission.name }}
+              <br>
+
+              <h6> This will be the label/titel of your project</h6>
+
+            </div>
+
+
+
+            <div class="col-3">
+
+              <h4>
+                {{Submission.image.label}}
+
+              </h4>
+              {{ Submission.image }}
+              <br>
+
+              <h6> This will be the main image, the first image everyone will see, it should show what your project is about</h6>
+            </div>
+
+            <div class="col-3">
+
+              <h4>
+
+                {{Submission.status.label}}
+              </h4>
+
+              {{ Submission.status }}
+              <br>
+
+              <h6>
+                the state of your project
+              </h6>
+
+            </div>
+
+
+            <div class="col-3">
+              <h4>
+                {{Submission.target_audience.label}}
+              </h4>
+              {{ Submission.target_audience }}
+
+              <br>
+              <h6>
+
+                alternativ kanske hade varit bra ?
+
+
+              </h6>
+            </div>
+
+          </div>
+
+          <br>
+          <br>
+
+        </div>       
+        <div class="tab-pane container fade" id="step_aim">
+          <div class="col-12">
+
+            <h4 align="center"> Enter project aim</h4>
+
+            <h5> 
+             Älgjägare spanar efter döda vildsvin  
+
+             Älgjägarna har fått en extra uppgift i
+             år. De ska spana efter döda vildsvin. 
+             Syftet är att stoppa den smittosamma  
+             sjukdomen afrikansk svinpest.         
+
+             Om jägare hittar ett självdött        
+             vildsvin ska de ta prover från        
+             kadavret, rappo..
+
+           </h5>
+
+
+         </div>
+
+         {{ Submission.aim }}
+       </div>
+       <div class="tab-pane container fade" id="step_description">
+        <div class="col-12">
+
+          <h4 align="center"> Enter project description </h4>
+
+
+        </div>
+
+        {{ Submission.description }}
+
+        <hr>
+        <br>
+
+      </div>
+
+      <div id="step3" class="tab-pane fade">
+
+
+
+
+        <div class="col-xxl-5   col-xl-9   col-lg-12 col-md-12 col-sm-12 col-12">
+
+          <h4 align="center" class=""> Nyckelord: </h4>
+
+
+          <br>
+
+          <div class="row">
+
+            <div class="col-4 col-lg-4 col-md-0 "></div>
+            <div class="col-4 col-sm-12 col-md-12 col-lg-5 ">
+              <h5 align="center">Lägg till nyckelord, gärna med översättnig i motsvarande fält på samma rad</h5>
+
+              <div class="row">
+                <button type="button" onclick="add_keyword_input_line()" class="col-6 form-control" style="height: 60px; background: MediumSeaGreen; color: white;"> <h4>Add </h4> </button>
+                <button type="button" onclick="remove_keyword_input_line()" class="col-6 form-control" style="height: 60px; background: IndianRed; color: white;"> <h4>Remove</h4></button>
+              </div>
+
+
+            </div>
+            <div class="col-4"></div>
+
+          </div>
+
+
+          <br>        <br>
+
+
+
+
+
+
+
+
+          <div class="row">
+            <div class="col-1"></div>
+            <div class="col-5"><h5 align="center">Svenska</h5></div>
+            <div class="col-1">  </div>
+            <div class="col-5"><h5 align="center">Engelska</h5></div>
+          </div>
+
+          <hr>
+
+
+          <div id="keyword_div">
+
+
+          </div>
+
+        </div>
+
+      </div>
+
+
+
+      <div id="step4" class="tab-pane fade">
+
+
+
+
+        <h3>Card view</h3>
+
+
+        <div class="row">
+
+
+          <div class="col-6"> 
+
+            <div class="col">
+
+              <h4>{{ Submission.name_card.label}}</h4>
+
+              <div class="col-4">
+                {{ Submission.name_card}}
+              </div>
+
+            </div>
+
+
+
+
+            <div class="col">
+
+              <h4>{{ Submission.aim_card.label}}</h4>
+              <div class="col-4">
+                {{ Submission.aim_card}}
+              </div>
+
+            </div>
+
+
+
+
+
+            <div class="col">
+
+              <h4>{{ Submission.description_card.label}}</h4>
+              <div class="col-4">
+                {{ Submission.description_card}}
+              </div>
+
+            </div>
+
+
+          </div>
+
+
+
+
+          <div style="padding-left: 20px; padding-right: 20px" class="col-lg-3 col-md-4 col-xs-6 mb-5">
+            <div class="project-item">
+              <div class="row">
+                <div class=" col">  
+                  <div  class="col project-items-justify blackFieldWhiteText">
+                    <h4 align="center" style="color: white; font-size: 16px" id="rep_card_name"> </h4>
+                  </div>
+                </div>
+              </div>
+              <div class="row">
+                <div class="col">
+                  <img class="mg-fluid w-100" id="card_img" src="{{ inital_image}}" />
+                </div>
+
+              </div>
+              <div class="col" style="padding-right: 5px; padding-left: 5px; margin-top: 3px">
+                <div class="row Lato-font ">
+                  <div class="col" >
+                    <span class="font-weight-bold">PROJECT AIM: </span> <span id="rep_card_aim" ></span>
+                  </div>
+                </div>
+                <hr>
+                <div class="row Lato-font">
+
+                  <div class="col">
+                    <span >DESCRIPTION: </span> <span id="rep_card_description"></span>
+                  </div>
+                </div>
+                <hr>
+                <div class="row Lato-font">
+                  <div class="col ">
+                    STATUS: ..........
+                  </div>
+                </div>
+                <hr>
+                keywords: .........
+                {% for keyword in ProjectEntry.keywords.all %}
+                <span style="background: black; color: white; margin: 3px; padding: 3px; border-radius: 5px">{{keyword}} </span> 
+                {% endfor %}
+              </div>
+            </div>
+          </div>
+
+        </div>
+
+
+
+
+      </div>
+
+      <div id="step5" class="tab-pane fade">
+
+
+        <h3> Contact info </h3>
+
+        <h5>
+          your email will not be publicly accessible, your contact name.....?
+          <br>
+          you can get mail from peaple that wants to get in contact .....
+        </h5>
+
+        <br><br>
+
+        <div class="row">
+
+          <div class="col-3">
+            <h4>{{ Submission.contact_name.label }}</h4>
+            {{ Submission.contact_name }}
+          </div>
+          
+
+          <div class="col-3">
+            <h4>{{ Submission.contact_email.label }}</h4>
+            {{ Submission.contact_email }}
+          </div>
+          
+
+          <div class="col-3">
+            <h4>{{ Submission.contact_role.label }}</h4>
+            {{ Submission.contact_role }}
+          </div>
+          
+
+          <div class="col-3">
+            <h4>{{ Submission.contact_affiliation.label }}</h4>
+            {{ Submission.contact_affiliation }}
+          </div>
+
+          <div class="col-3">
+            <h4>{{ Submission.url.label }}</h4>
+            {{ Submission.url }}
+          </div>
+
+        </div>
+        <br>
+        <br>
+
+        <h4> I agre to ....</h4>
+
+        <input type="checkbox" class="form-control col-2" name="agre">
+
+        <br><br>
+
+
+        <button class="form-control col-4 btn-success" type='submit' value='Save'>Submit Project to ARCS</button> <!-- TODO replace with django template for  -->
+
+
+
+
+      
+
+    </div>
+
+    <div style="display: none;">
+
+
+
+      <div id="hidden_keyword_div" class="row" style="border-bottom: 1px solid black">
+
+        <div class="col-1"><span id="hidden_row_number"></span></div>
+
+        <div class="col-5">
+          <input id="hidden_input_sve" list="brow" class="form-control">
+        </div>
+        <div class="col-1"> <h1 align="center">=</h1></div>
+        <div class="col-5">
+          <input id="hidden_input_eng" list="brow2" class="form-control">
+
+        </div>
+      </div>
+
+    </form>
+
+
+
+      {% else %}
+      <p>{% trans "Plese sign in or create an account to add a project." %}</p>
+      <p>{% trans "To submit a project you'll be asked to provide the following information." %}</p>
+      <ul>
+        <li>{% trans "A common name for identifying the project." %}</li>
+        <li>{% trans "A brief description of the project." %}</li>
+        <li>{% trans "The aim of the project." %}</li>
+        <li>{% trans "The status of the projet ie if it is active or historical." %}</li>
+        <li>{% trans "The target audience of the project." %}</li>
+        <li>{% trans "Your affiliation to the project as the person submitting the project." %}</li>
+        <li>{% trans "Keywords for the project." %}</li>
+      </ul>
+      <p>{% trans "Following submission your project will be reviewed before becoming visibile on the site and included in the metadata exchange. Review the citizen science assessment criteria for visiblity and exchange." %}</p>
+      {% endif %}
+
+
+
+
+    </div>
+
+  </div>
+
+
+
+
+
+
+</div>
+
+
+
+{% if keyword_len  %}
+
+<script type="text/javascript">
+
+  var count = 0
+
+
+
+</script>
+
+
+{% for line in keyword_line %}
+
+<script type="text/javascript">
+  add_keyword_input_line("{{line.0}}", "{{line.1}}")
+</script>
+
+{% endfor %}
+
+
+
+
 {% else %}
-<p>{% trans "Plese sign in or create an account to add a project." %}</p>
-<p>{% trans "To submit a project you'll be asked to provide the following information." %}</p>
-<ul>
-  <li>{% trans "A common name for identifying the project." %}</li>
-  <li>{% trans "A brief description of the project." %}</li>
-  <li>{% trans "The aim of the project." %}</li>
-  <li>{% trans "The status of the projet ie if it is active or historical." %}</li>
-  <li>{% trans "The target audience of the project." %}</li>
-  <li>{% trans "Your affiliation to the project as the person submitting the project." %}</li>
-  <li>{% trans "Keywords for the project." %}</li>
-</ul>
-<p>{% trans "Following submission your project will be reviewed before becoming visibile on the site and included in the metadata exchange. Review the citizen science assessment criteria for visiblity and exchange." %}</p>
+
+<script type="text/javascript">
+
+  var count = 0 
+
+  add_keyword_input_line()
+
+
+
+</script>
+
 {% endif %}
 
-{% endblock content %}
+
+<script type="text/javascript">
+
+ console.log($('#id_aim').val()  );
+
+
+
+  $("#id_name").change({name: "name"}, change_card_passive);
+  $("#id_name_card").change({name: "name"}, change_card_dominant);
+
+  $("#id_aim").change({name: "aim"}, change_card_passive);
+  $("#id_aim_card").change({name: "aim"}, change_card_dominant);
+
+  $("#id_description").change({name: "description"}, change_card_passive);
+  $("#id_description_card").change({name: "description"}, change_card_dominant);
+
+
+
+
+  function change_card_dominant(event){
+
+    if(this.value.replace(/\s/g, "").length == 0 ){
+      $("#rep_card_" + event.data.name ).html($("#id_"+ event.data.name).val());
+    }
+
+    else{
+
+      $("#rep_card_" + event.data.name ).html(this.value);
+
+    }
+
+
+  };
+
+  function change_card_passive(event){
+
+    if( $("#id_" + event.data.name + "_card").val().replace(/\s/g, "").length == 0 ){
+
+      $("#rep_card_" + event.data.name ).html(this.value);
+
+    }
+
+  };
+
+
+  var secClicked = true;
+
+
+
+  function nextnav(){
+
+
+
+    
+
+    if (secClicked == true){
+
+      var current_a_tag = $(".nav-tabs").find(".active");
+      var go_to_next = true;
+
+
+      $(current_a_tag.attr("href")).find("input").each(function(){
+        if($(this).prop('required')){
+          if(this.value.replace(/\s/g, "").length == 0){
+
+            go_to_next = false;
+
+            console.log(this)
+
+            $(this).css("border", "solid red 1px")
+          }
+          else{
+            $(this).css("border", "solid MediumSeaGreen 1px");
+          };
+        } 
+
+      });
+
+      if(current_a_tag.attr("href") == "#step_aim"){
+        console.log($('#id_aim').val())
+        if($('#id_aim').val().length < 30   ){
+          var go_to_next = false;
+          
+        }
+
+      }
+
+      if(current_a_tag.attr("href") == "#step_description"){
+        console.log($('#id_description').val());
+
+        if($('#id_description').val().length < 30   ){
+          var go_to_next = false;
+          
+        }
+
+      }
+
+
+
+
+
+
+
+      if(go_to_next == true){
+
+        'current_a_tag.addClass("disabled");'
+
+        current_a_tag.parent().css("background", "MediumSeaGreen");
+        current_a_tag.parent().next().find('a').removeClass('disabled').trigger('click').addClass("disabled");
+
+      }
+      else{
+        current_a_tag.parent().css("background", "IndianRed");
+      }
+
+          secClicked = false;
+
+        setTimeout(function() {
+        secClicked = true;
+    }, 1000);
+
+  }
+
+
+
+
+  };
+
+function prevnav(){
+
+  if (secClicked == true){
+
+    var current_a_tag = $(".nav-tabs").find(".active");
+    current_a_tag.parent().css("background", "");
+
+
+
+    current_a_tag.parent().prev().find('a').removeClass('disabled').trigger('click').addClass("disabled");
+
+    secClicked = false;
+
+        setTimeout(function() {
+        secClicked = true;
+    }, 1000);
+
+
+
+  }
+
+}
+
+function readURL() {
+
+
+        if (this.files && this.files[0]) {
+            var reader = new FileReader();
+
+            reader.onload = function (e) {
+                $('#card_img')
+                    .attr('src', e.target.result)
+                    .width(150)
+                    .height(200);
+            };
+
+            reader.readAsDataURL(this.files[0]);
+        }
+    }
+
+$("#id_image").change(readURL)
+
+
+
+
+
+
+
+
+$("#id_name_card").change()
+$("#id_image").change()
+$("#id_aim_card").change()
+$("#id_description_card").change()
+
+</script>
+
+
+
+
+
+
+
+
+
+<datalist id="brow2">
+  <option value="Internet Explorer">
+    <option value="Firefox">
+      <option value="Chrome">
+        <option value="Opera">
+          <option value="Safari">
+          </datalist> 
+
+
+
+
+
+          <datalist id="brow">
+            <option value="Internet Explorer">
+              <option value="Firefox">
+                <option value="Chrome">
+                  <option value="Opera">
+                    <option value="Safari">
+                      <option value="Safari">
+                        <option value="Safari">
+                          <option value="Safari">
+                            <option value="Safari">
+                              <option value="Safari">
+                                <option value="Safari">
+                                  <option value="Safari">
+                                    <option value="Safari">
+                                      <option value="Safari">
+                                        <option value="Safari">
+                                          <option value="Safari">
+                                            <option value="Safari">
+                                              <option value="Safari">
+                                                <option value="Safari">
+                                                  <option value="Safari">
+                                                    <option value="Safari">
+                                                      <option value="Safari">
+
+                                                      </datalist>
+
+                                                      {% endblock content %}
+
+
+
+
+
+
+
+
+
+
+
+
