--- a/ArcsSystem/templates/staticpages/staticpage.html
+++ b/ArcsSystem/templates/staticpages/staticpage.html
@@ -5,6 +5,8 @@
 {% block content %}
 
 {% load publications_extras %}
+<div class="custom-container">
+
 
 
 
@@ -15,4 +17,8 @@
     <p> {{ object.content }} </p>
 
 {% endautoescape %}
+
+
+</div>
+
 {% endblock content %}
