--- a/ArcsSystem/templates/users/accept_terms_view.html
+++ b/ArcsSystem/templates/users/accept_terms_view.html
@@ -4,7 +4,7 @@
 
 <h1>{{ term_object.terms_title }}</h1>
 <h4>{{ term_object.version_number }}</h4>
-{{ term_object.terms_content|richtext }}
+{{ term_object.terms_content }}
 
 <form action="{% url 'accept-terms' %}" method="POST">
     {% csrf_token %}
