change custom user to form models

--- a/ArcsSystem/templates/users/user_detail_view.html
+++ b/ArcsSystem/templates/users/user_detail_view.html
@@ -4,7 +4,7 @@
 {# this tag will insert a comment in the HMTL, but won't be rendered #}
 <h1>Private Profile view</h1>
 
-<form id="edit-save-private-profile-form" method="GET">
+<form id="private-profile-form" method="GET">
     {% csrf_token %}
     {{ form.as_p }}
     <a href="{% url 'userprofile_edit_view' %}">Start editing</a>
