--- a/ArcsSystem/templates/keywords/keyword_detail.html
+++ b/ArcsSystem/templates/keywords/keyword_detail.html
@@ -1,105 +1,24 @@
 {% extends 'base.html' %}
 {% load static %}
 {% load i18n %}
-{% load publications_extras %}
+{% load keyword_extras %}
 
 
 {% block content %}
+	<br>
+	<br>
+
+    <div class="custom-container">
+        <h1>{{ object.keyword }}</h1>
+    </div>
+
+    <hr>
+
+    <br>
+    <br>
 
 
-
-
-<div class="detail-view">
-<h1>{{ article.title }}</h1>
-
-<p><b>{% trans "Authors" %}:</b> {{ article.authors }}</p>
-
-<p><b>{% trans "Publication Year" %}:</b> {{ article.py }}</p>
-<p><b>{% trans "Journal" %}:</b> {{ article.source }}</p>
-<p><b>{% trans "Volume/Issue" %}:</b> {{ article.volume }}({{ article.issue }})</p>
-
-<p><b>{% trans "Keywords" %}:</b>
-  {% for keyword in article.keywords.all %}
-      {{ keyword }},    <!-- looks ugly but here is a comma -->
-  {% endfor %}
-</p>
-
-<p><b>DOI /URL: </b><a href="https://doi.org/{{ article.doi }}" >{{ article.doi }}</a></p>
-
-
-<p><b>{% trans "Abstract" %}:</b> {{ article.abstract }}</p>
-
-
-
-</div>
-<div class="custom-container">
-
-<hr>
-<h4>start of related things</h4>
-
-
-
-
-
-{{ article|get_all_related:LANGUAGE_CODE|safe  }}
-
-
-
-
-
-
-
-
-
-
-	{% if forms %}
-
-	<br><br><hr><br><br>
-
-
-
-	<h5> Article id is: {{article.id}}</h5>
-
-	<h6>This part is only for admin. No other user will be able to access it</h6>
-
-<br>
-
-	<button class="form-control col-3" onclick='$( "#admindiv" ).toggle();'> Toggle menu </button>
-	<br><br>
-
-	<form method="get"  action="{% url 'publications:admin_change' %}">
-
-		<input type="hidden" name="pub_id" value="{{article.id}}">
-
-
-	<div id="admindiv" class="row">
-	{% for form in forms %}
-
-	<div class="col-3" >
-
-		{{form.cat }}
-
-		<hr>
-
-		{{form}}
-
-
-	</div>
-
-	{% endfor %}
-
-</div>
-<br><br>
-
-<button class="form-control col-2 btn btn-success"> Make changes > </button>
-
-</form>
-
-{% endif %}
-
-
-</div>
-
+{{ object|get_all_related:LANGUAGE_CODE|safe  }}
 
 
 
@@ -176,7 +95,7 @@ d3.json("\\media\\miserables.json", function(error, graph) {
 
       .attr("stroke-width", function(d) { return Math.sqrt(d.value/5); });
 
-  link.attr('opacity', function(d) { return d.value/30 ; } );
+  link.attr('opacity', function(d) { return d.value/30 + 0.4; } );
 
 
 
@@ -282,11 +201,6 @@ function calc_font_size(d) {return Math.sqrt(d.value)  + 16};
 
 
 </script>
-
-
-
-
-
 
 
 
